--- a/groupassigfts.Rmd
+++ b/groupassigfts.Rmd
@@ -74,7 +74,7 @@ summary_table_ts_or <- read_excel(summary_table_ts_file, sheet = 1)
 summary_table_ts_tr <- read_excel(summary_table_ts_file, sheet = 5)
 tests_table <- read_excel(summary_table_ts_file, sheet = 2)
 
-#Luna file paths
+#Luna file path
 data<-read.csv(file_path_original_data, header=TRUE,sep=";",dec=",")
 
 # Data itself
