--- a/groupassigfts.Rmd
+++ b/groupassigfts.Rmd
@@ -160,7 +160,7 @@ When looking at both ACF & PACF function we observe that, at a 95% confidence le
 Box.test (y, lag = 20, type="Ljung")
 ```
 
-The test p.value of 0.5 suggests that, at a 95% confindence level, we should accept the alternative hypothesis that the data is correlated and that lag 12 matters for forecasting purposes. Nevertheless, as mentioned earlier, the lag's small magnitude and our lack of additional infomation about the data made us favour the results showcased by our graphical analysis. Consequently, given the series' mean of 0.03205, we feel comfortable suggesting this series represents a white noise (WN) process. In addition, we can also conclude that no linear model would be helpful to model/predict future values of this time series (i.e. mean is the best point estimmate). Now, we will try and identify if the series' marginal distribution is normality distributed (or not) by recurring to both graphical tools and nornality tests (i.e. Shapiro and Jarque-Bera Tests). 
+The test p.value of 0.5 suggests that, at a 95% confindence level, we cannot reject the null hypothesis that the data is uncorrelated, a result that corroborates the results showcased by our graphical analysis. Consequently, given the series' mean of 0.03205, we feel comfortable suggesting this series represents a white noise (WN) process. In addition, we can also conclude that no linear model would be helpful to model/predict future values of this time series (i.e. mean is the best point estimmate). Now, we will try and identify if the series' marginal distribution is normally distributed (or not) by recurring to both graphical tools and nornality tests (i.e. Shapiro and Jarque-Bera Tests). 
 
 ### Testing for Normality:
 
@@ -216,7 +216,7 @@ skewness(y)
 kurtosis(y,method=c("moment"))  
 ```
 
-The series plot suggests this dataset is not stationary around the mean (it exhbits clear sustended positive and negative fluctuations), a result hinted by the series -0.22 mean. Regarding the variance, the graph shows no clear and sustainable variance trend acrross time, hence we deemed series 2 variance stationary. To verify our deductions, we conducted a formal unit root test: the Augmented Dickey Fuller (ADF) with the following hypothesis:
+The series plot suggests this dataset is not stationary around the mean (it exhbits clear sustained positive and negative fluctuations), a result hinted by the series -0.22 mean. Regarding the variance, the graph shows no clear and sustainable variance trend acrross time, hence we deemed series 2 variance stationary. To verify our deductions, we conducted a formal unit root test: the Augmented Dickey Fuller (ADF) with the following hypothesis:
 
   *Ho: the process is not stationary.(i.e. We need a unit root)*
   *H1: the process is stationary.(i.e. No differences needed)*
@@ -241,8 +241,359 @@ Box.test (y, lag = 20, type="Ljung")
 
 The extremely small p-value reported confirmed our graphical analysis and we are now able to infer our time series is not a WN process of any kind. Consequently, we can also conclude that a linear model is needed model/predict future values of this time series. Ultimately, requiring (or not) a non-linear model to analyse this time series will remain unknown since we must first isolate the linear part of the model to make such inference.
 
-</div id= 'time_series_2_transformed'>
+Now, we will try and identify if the series' marginal distribution is normally distributed by recurring to both graphical tools and nornality tests (i.e. Shapiro and Jarque-Bera Tests). 
 
+### Testing for Normality:
+
+```{r date_variant, echo=FALSE}
+
+#Graphically:
+
+par(mfrow=c(1,1))
+hist(y,prob=T,ylim=c(0,0.6),xlim=c(mean(y)-3*sd(y),mean(y)+3*sd(y)),col="red")
+lines(density(y),lwd=2)
+mu<-mean(y)
+sigma<-sd(y)
+x<-seq(mu-3*sigma,mu+3*sigma,length=100)
+yy<-dnorm(x,mu,sigma)
+lines(x,yy,lwd=2,col="blue")
+```
+According to our graphical analysis, the time series 3 joint distribution cannot be normally distributed. We decided to verify our intuition with formal tests.
+
+```{r date_variant, echo=FALSE}
+
+#Formal Tests:
+
+shapiro.test(y)
+jb.norm.test(y)
+```
+Both formal tests follow the same hypothesis structure:
+
+  *Ho: the data is normally distributed*
+  *H1: the data is not normally distributed*
+
+Both Jarque-Bera and Shapiro tests reported very small p-values, indicating we should reject the null hypothesis at a 95% confidence level. Therefore, we were able to validate the conclusions based on the team's eye test.
+
+## Time Series 2 (1 Difference Transformation):
+
+### Graphical Representation of Time Series and respective ACF & PACF:
+
+```{r date_variant, echo=FALSE}
+y<-series2
+y<-diff(y)
+par(mar=c(2,2,2,2)) # to adjust graphic size
+par(mfrow=c(3,1)) # plot the series, its acf and pacf together
+ts.plot(y)   
+acf(y)
+pacf(y)
+```
+
+### Computation of basic descriptive statistics:
+
+```{r date_variant, echo=FALSE}
+mean(y)
+sd(y)
+skewness(y)
+kurtosis(y,method=c("moment"))  
+```
+
+The series plot suggest this dataset is stationary around both mean and variance. To verify our deductions, we conducted a formal unit root test: the Augmented Dickey Fuller (ADF) with the following hypothesis:
+
+  *Ho: the process is not stationary.(i.e. We need a unit root)*
+  *H1: the process is stationary.(i.e. No differences needed)*
+
+**Stationarity Formal Test:
+
+```{r date_variant, echo=FALSE}
+ndiffs(y, alpha=0.05, test=c("adf"))
+```
+The ADF test indicates 0 required differences, hence enabling us to reject Ho and validate our previous inference. Furthermore, we are also capable of claiming no further data transformation will be needed. When analysing both ACF & PACF function we observe that, at a 95% confidence level, past information appears unable to contribute to futuristic predictions (i.e. all lags are within the confidence interval limit boundaries). To formally assess the series autocorrelation, we opted to realise a Box-Ljung Test with the following hypotheses:
+
+  *Ho: Uncorrelated data*
+  *H1: Correlated data*
+
+**Testing for White-Noise(WN)/Autocorrelation:
+
+```{r date_variant, echo=FALSE}
+Box.test (y, lag = 20, type="Ljung")
+```
+
+The test p.value of 0.9 suggests that, at a 95% confindence level, we should accept null hypothesis that the data is uncorrelated and that the past is usefuless for forecasting purposes. Therefore, given the series' mean of -0.22, we feel comfortable suggesting this series represents a white noise (WN) process. In addition, we can also conclude that a linear model would no longer be helpful to model/predict future values of this time series (i.e. mean is the best point estimmate). 
+
+Now, we will try and identify if the series' marginal distribution is normally distributed (and hence try and determine if such WN process is also GWN) by recurring to both graphical tools and nornality tests (i.e. Shapiro and Jarque-Bera Tests). 
+
+### Testing for Normality:
+
+```{r date_variant, echo=FALSE}
+
+#Graphically:
+
+par(mfrow=c(1,1))
+hist(y,prob=T,ylim=c(0,0.6),xlim=c(mean(y)-3*sd(y),mean(y)+3*sd(y)),col="red")
+lines(density(y),lwd=2)
+mu<-mean(y)
+sigma<-sd(y)
+x<-seq(mu-3*sigma,mu+3*sigma,length=100)
+yy<-dnorm(x,mu,sigma)
+lines(x,yy,lwd=2,col="blue")
+```
+According to our graphical analysis, the time series 2 (trasnformed) joint distribution seems normally distributed given the black (our series) and blue (normal distribution reference line N ~ (0,1)) overlap significantly despite being the narrower Bell curve exhibited by the time series studied between (-1;1).
+
+```{r date_variant, echo=FALSE}
+
+#Formal Tests:
+
+shapiro.test(y)
+jb.norm.test(y)
+```
+Both formal tests follow the same hypothesis structure:
+
+  *Ho: the data is normally distributed*
+  *H1: the data is not normally distributed*
+
+Both Jarque-Bera (p-value 0.55) and Shapiro tests (p-value 0.69) indicate we should accept the null hypothesis at a 95% confidence level. Therefore, we were able to validate the conclusions based on the team's eye test. As per consequence, by infering this series joint distribution is marginally distributed, we concluded it is not only a WN but also Gaussian White Noise (GWN) and subsquently Strict White Noise (SWN) process since an uncorrelated variable whose multivariate joint distribution is Normal is forcefully i.i.d. Given our latest findings, we can also infer that no non-linear model would be of help in future forecasting endeavours. 
+
+
+</div id= 'time_series_3'>
+
+## Time Series 3
+
+### Graphical Representation of Time Series and respective ACF & PACF:
+
+```{r date_variant, echo=FALSE}
+y<-series3
+par(mar=c(2,2,2,2)) # to adjust graphic size
+par(mfrow=c(3,1)) # plot the series, its acf and pacf together
+ts.plot(y)   
+acf(y)
+pacf(y)
+```
+
+### Computation of basic descriptive statistics:
+
+```{r date_variant, echo=FALSE}
+mean(y)
+sd(y)
+skewness(y)
+kurtosis(y,method=c("moment"))  
+```
+
+The series plot suggests this dataset is not stationary around the mean (it exhbits a clear sustained downwards trend), a result hinted by the series -21.65 mean. Regarding the variance, the graph shows no clear and sustainable variance trend acrross time, hence we deemed series 3 variance stationary. To verify our deductions, we conducted a formal unit root test: the Augmented Dickey Fuller (ADF) with the following hypothesis:
+
+  *Ho: the process is not stationary.(i.e. We need a unit root)*
+  *H1: the process is stationary.(i.e. No differences needed)*
+
+**Stationarity Formal Test:
+
+```{r date_variant, echo=FALSE}
+ndiffs(y, alpha=0.05, test=c("adf"))
+```
+
+The ADF test indicates 1 difference is required for the data to become stationary in the mean, hence enabling us to accept Ho and validate our previous inference. 
+When observing both ACF & PACF function we infer that, at a 95% confidence level, past information (particularly lags 2 and 3) could prove to be extremely helpful to guide future forecasting efforts. To formally assess the series autocorrelation, we opted to realise a Box-Ljung Test with the following hypotheses:
+
+  *Ho: Uncorrelated data*
+  *H1: Correlated data*
+
+**Testing for White-Noise(WN)/Autocorrelation:
+
+```{r date_variant, echo=FALSE}
+Box.test (y, lag = 20, type="Ljung")
+```
+
+The extremely small p-value reported confirmed our graphical analysis and we are now able to infer our time series is not a WN process of any kind. Consequently, we can also conclude that a linear model is needed model/predict future values of this time series. Ultimately, requiring (or not) a non-linear model to analyse this time series will remain unknown since we must first isolate the linear part of the model to make such inference.
+
+Now, we will try and identify if the series' marginal distribution is normally distributed by recurring to both graphical tools and nornality tests (i.e. Shapiro and Jarque-Bera Tests). 
+
+### Testing for Normality:
+
+```{r date_variant, echo=FALSE}
+
+#Graphically:
+
+par(mfrow=c(1,1))
+hist(y,prob=T,ylim=c(0,0.6),xlim=c(mean(y)-3*sd(y),mean(y)+3*sd(y)),col="red")
+lines(density(y),lwd=2)
+mu<-mean(y)
+sigma<-sd(y)
+x<-seq(mu-3*sigma,mu+3*sigma,length=100)
+yy<-dnorm(x,mu,sigma)
+lines(x,yy,lwd=2,col="blue")
+```
+According to our graphical analysis, the time series 3 joint distribution cannot be normally distributed. We decided to verify our intuition with formal tests.
+
+```{r date_variant, echo=FALSE}
+
+#Formal Tests:
+
+shapiro.test(y)
+jb.norm.test(y)
+```
+Both formal tests follow the same hypothesis structure:
+
+  *Ho: the data is normally distributed*
+  *H1: the data is not normally distributed*
+
+Both Jarque-Bera and Shapiro tests reported very small p-values, indicating we should reject the null hypothesis at a 95% confidence level. Therefore, we were able to validate the conclusions based on the team's eye test.
+
+## Time Series 3 (1 Difference Transformation):
+
+### Graphical Representation of Time Series and respective ACF & PACF:
+
+```{r date_variant, echo=FALSE}
+y<-series2
+y<-diff(y)
+par(mar=c(2,2,2,2)) # to adjust graphic size
+par(mfrow=c(3,1)) # plot the series, its acf and pacf together
+ts.plot(y)   
+acf(y)
+pacf(y)
+```
+
+### Computation of basic descriptive statistics:
+
+```{r date_variant, echo=FALSE}
+mean(y)
+sd(y)
+skewness(y)
+kurtosis(y,method=c("moment"))  
+```
+
+The series plot suggest this dataset is stationary around both mean and variance. To verify our deductions, we conducted a formal unit root test: the Augmented Dickey Fuller (ADF) with the following hypothesis:
+
+  *Ho: the process is not stationary.(i.e. We need a unit root)*
+  *H1: the process is stationary.(i.e. No differences needed)*
+
+**Stationarity Formal Test:
+
+```{r date_variant, echo=FALSE}
+ndiffs(y, alpha=0.05, test=c("adf"))
+```
+The ADF test indicates 0 required differences, hence enabling us to reject Ho and validate our previous inference. Furthermore, we are also capable of claiming no further data transformation will be required. Nevertheless, when analysing both ACF & PACF function we observe that, at a 95% confidence level, past information appears capable of contributing to future predictions (i.e. lags 1 and 3 are out of bounds and with significant magnitude). To formally assess the series autocorrelation, we opted to realise a Box-Ljung Test with the following hypotheses:
+
+  *Ho: Uncorrelated data*
+  *H1: Correlated data*
+
+**Testing for White-Noise(WN)/Autocorrelation:
+
+```{r date_variant, echo=FALSE}
+Box.test (y, lag = 20, type="Ljung")
+```
+
+The extremely small p-value reported goes against our graphical analysis based on the ACF & PACF and conveys the idea that this time series is correlated with its past values. For this particular case, we decided to follow the formal test and the eye test from the initial series plotting, hence inferring our time series is not a WN process (nor SWN and GWN as result). Consequently, we can also conclude that a linear model is needed model/predict future values of this time series. Ultimately, requiring (or not) a non-linear model to analyse this time series will remain unknown since we must first isolate the linear part of the model to make such inference.
+
+Now, we will try and identify if the series' marginal distribution is normally distributed by recurring to both graphical tools and nornality tests (i.e. Shapiro and Jarque-Bera Tests). 
+
+### Testing for Normality:
+
+```{r date_variant, echo=FALSE}
+
+#Graphically:
+
+par(mfrow=c(1,1))
+hist(y,prob=T,ylim=c(0,0.6),xlim=c(mean(y)-3*sd(y),mean(y)+3*sd(y)),col="red")
+lines(density(y),lwd=2)
+mu<-mean(y)
+sigma<-sd(y)
+x<-seq(mu-3*sigma,mu+3*sigma,length=100)
+yy<-dnorm(x,mu,sigma)
+lines(x,yy,lwd=2,col="blue")
+```
+According to our graphical analysis, the time series 3 (trasnformed) joint distribution could be normally distributed given the black (our series) and blue (normal distribution reference line N ~ (0,1)) have a similar shapes. We decided to verify our intuition with formal tests.
+
+```{r date_variant, echo=FALSE}
+
+#Formal Tests:
+
+shapiro.test(y)
+jb.norm.test(y)
+```
+Both formal tests follow the same hypothesis structure:
+
+  *Ho: the data is normally distributed*
+  *H1: the data is not normally distributed*
+
+Both Jarque-Bera (p-value 0.20) and Shapiro tests (p-value 0.22) indicate we should accept the null hypothesis at a 95% confidence level. Therefore, we were able to validate the conclusions based on the team's eye test. As per consequence, this series joint distribution is normally distributed. 
+
+</div id= 'time_series_4'>
+## Time Series 4
+
+### Graphical Representation of Time Series and respective ACF & PACF:
+
+```{r date_variant, echo=FALSE}
+y<-series4
+par(mar=c(2,2,2,2)) # to adjust graphic size
+par(mfrow=c(3,1)) # plot the series, its acf and pacf together
+ts.plot(y)   
+acf(y)
+pacf(y)
+```
+
+### Computation of basic descriptive statistics:
+
+```{r date_variant, echo=FALSE}
+mean(y)
+sd(y)
+skewness(y)
+kurtosis(y,method=c("moment"))  
+```
+
+The series plot suggests this dataset is not stationary around the mean (it exhbits a clear sustained upward trend), a result hinted by the series 1256.8 mean. Regarding the variance, the graph shows no clear and sustainable variance trend acrross time, hence we deemed series 2 variance stationary. To verify our deductions, we conducted a formal unit root test: the Augmented Dickey Fuller (ADF) with the following hypothesis:
+
+  *Ho: the process is not stationary.(i.e. We need a unit root)*
+  *H1: the process is stationary.(i.e. No differences needed)*
+
+**Stationarity Formal Test:
+
+```{r date_variant, echo=FALSE}
+ndiffs(y, alpha=0.05, test=c("adf"))
+```
+
+The ADF test indicates 2 differences are required for the data to become stationary in the mean, hence enabling us to accept Ho and validate our previous inference. When observing both ACF & PACF function we infer that, at a 95% confidence level, past information (especially lag 1) could prove to be extremely helpful to guide future forecasting efforts. To formally assess the series autocorrelation, we opted to realise a Box-Ljung Test with the following hypotheses:
+
+  *Ho: Uncorrelated data*
+  *H1: Correlated data*
+
+**Testing for White-Noise(WN)/Autocorrelation:
+
+```{r date_variant, echo=FALSE}
+Box.test (y, lag = 20, type="Ljung")
+```
+
+The extremely small p-value reported confirmed our graphical analysis and we are now able to infer our time series is not a WN process of any kind. Consequently, we can also conclude that a linear model is needed model/predict future values of this time series. Ultimately, requiring (or not) a non-linear model to analyse this time series will remain unknown since we must first isolate the linear part of the model to make such inference.
+
+Now, we will try and identify if the series' marginal distribution is normally distributed by recurring to both graphical tools and nornality tests (i.e. Shapiro and Jarque-Bera Tests). 
+
+### Testing for Normality:
+
+```{r date_variant, echo=FALSE}
+
+#Graphically:
+
+par(mfrow=c(1,1))
+hist(y,prob=T,ylim=c(0,0.6),xlim=c(mean(y)-3*sd(y),mean(y)+3*sd(y)),col="red")
+lines(density(y),lwd=2)
+mu<-mean(y)
+sigma<-sd(y)
+x<-seq(mu-3*sigma,mu+3*sigma,length=100)
+yy<-dnorm(x,mu,sigma)
+lines(x,yy,lwd=2,col="blue")
+```
+According to our graphical analysis, the time series 4 joint distribution cannot be normally distributed. We decided to verify our intuition with formal tests.
+
+```{r date_variant, echo=FALSE}
+
+#Formal Tests:
+
+shapiro.test(y)
+jb.norm.test(y)
+```
+Both formal tests follow the same hypothesis structure:
+
+  *Ho: the data is normally distributed*
+  *H1: the data is not normally distributed*
+
+Both Jarque-Bera and Shapiro tests reported extremely small p-values, indicating we should reject the null hypothesis at a 95% confidence level. Therefore, we were able to validate the conclusions based on the team's eye test.
 
 
 # HEY GUYS COPYPASTE FROM HERE TO '</div>' AND ADD YOUR SERIES INFO AND THE DESIRED GRAPHS I WILL MAKE IT LOOK NICE ON THRU
